# Tutorial-SEMANTiCS2025

./: .gitignore  Dockerfile  Gemfile  README.md  index.html
.github/workflows/: deploy-gh-pages.yml
content/: abstract.md  audience.md  description.md  index.md.erb  material.md  presenters.md  requirements.md
content/styles/: lncs.scss  screen.scss
slides/: index.html  package-lock.json
slides/code/: pipeline-1.1.ttl  pipeline-1.2.ttl  processor-class.java  processor-class.py  processor-class.ts  processor-definition-js.ttl  processor-definition-jvm.ttl  processor-definition-py.ttl  processor-shape.ttl  pyproject.toml  runner-example-2.ttl  runner-example.ttl  shacl-example.jsonld  shacl-example.ttl
slides/img/: .$ArchitectureOverview.drawio.bkp  .$RunningExample.drawio.bkp  .$diagrams.drawio.bkp  .$pipeline1.drawio.bkp  ArchitectureOverview.drawio  PipelineFile.drawio  PipelineFileOverview.drawio  RunningExample.drawio  diagrams.drawio  pipeline1.drawio  pipeline2.drawio  pipeline3.drawio
slides/styles/: custom.css
styles/: print.css  screen.css
