[project]
name = "vienna-weather-forecast-kg-pipeline"
version = "0.0.1"
description = "Pipeline for Vienna's weather forecast in a KG."
requires-python = "==3.13.*"
dependencies = [
    "rdfc-runner>=0.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resources"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
system-packages = false
installer = "uv"
env-vars = { PYTHONPATH = "src" }
